second half stage one

--- a/index.html
+++ b/index.html
@@ -89,18 +89,46 @@
         <p>A whole stack of people/computers called miners (who mining for Bitcoin) who collectively record every single bitcoin transaction that happens.<br><br>This is stored on something called the block chain. The block chain gets updated in real-time by the minors.<br><br>When a transaction happens, the transaction gets announced into the bitcoin eco system in the form of a puzzle/code. The first person/computer to crack the number puzzle/code gets a fee for doing it the fastest. They then update the block chain with the transaction details and the world keeps turning.<br><br> Rather than me expalin in depth, this video does a pretty good job at it.</p>
       </div>
     </div>
-    <h2  style="color: #ff5c5c; font-size: 40px; text-align: center;">So, should we talk money?</h2>
-    <div class="talkmoney">
-
-        <h3>So how is bitcoin performing?</h3>
-          <p>(Insert graph)</p>
-        <h3>So how much a Business day roughly am I making?</h3>
-          <p>As of October XX, I’m making approx XX Bitcoin a Business day which works out to be €XX or USD$XX as of (1st October 2017).</p>
-        <h3>How am I doing it?</h3>
-          <p>I’m buying contracts (their real name is packages) through a mining company called USI Tech. Basically, what happens is I buy a contract from USI-Tech worth €50 but paid in bitcoin (pending what the currency exchange it) and the contract lasts for 140 Days. What USI-Tech claim to do is give me 140% return on capital for that one package. They pay 1% per day... i.e daily returns you can either compound or withdraw as you like. What it doesn’t take into account is if the value of bitcoin goes up (as they pay in bitcoin). So if the value of bitcoin goes up, so does your returns. </p>
-        <h3>So how much did I put in?</h3>
+    <div class="container" id="graph">
+      <div class="copy">
+        <h2  style="color: #ff5c5c; font-size: 40px; text-align: center;">So, how is Bitcoin growning against the US Dollar?</h2>
+      </div>
+      <div class="media">
+        <!-- TradingView Widget BEGIN -->
+    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+    <script type="text/javascript">
+    new TradingView.widget({
+      "width": 500,
+      "height": 300,
+      "symbol": "NASDAQ:AAPL",
+      "interval": "D",
+      "timezone": "Etc/UTC",
+      "theme": "Light",
+      "style": "3",
+      "locale": "en",
+      "toolbar_bg": "#f1f3f6",
+      "enable_publishing": false,
+      "hide_top_toolbar": true,
+      "save_image": false,
+      "hideideas": true
+    });
+    </script>
+    <!-- TradingView Widget END -->
+      </div>
+    </div>
+    <div id="recap">
+      <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">So let's go back to the orginal numbers...</h2>
+      <div id="subheading">
+        <h2>My return on Captial</h2>
+        <h2 style="font-size: 50px;"> is USD $150 a day*</h2>
+        <p style="text-align: right; font-size: 10px;"><i>*based on a 5 day week on average as of November 2017 </i></p>
+      </div>
+      <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">How am I doing it?!?</h2>
+          <p>I’m buying contracts (their real name is packages) through a mining company called USI Tech. Basically, what happens is I buy a contract from USI-Tech worth €50 which is paid back to me in bitcoin. Each pack (or contract) lasts for 140 Days.
+            <br><br>What USI-Tech claim to do is give me 140% return on capital for that one package returning 1% per day paid in bitcoin. With that 1% you're free to either let it compound, withdraw as you like or use it to rebuy pacakges. <br><br>What it doesn’t take into account is if the value of bitcoin goes up, (as they pay in bitcoin), so does your returns. </p>
+        <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">So how much did I put in?</h2>
           <p>Initially, I put AU$3,000 (USD$2,332) into USI-Tech. I figured, throw a decent sum and see what happens, knowing full well, Bitcoin (Or USI-Tech) could all be gone tomorrow. So far, xxx days since starting (insert date) i have gotten back xxxBitcoin which is USD$xxx AU$xxx  €xxx...However, As I get my returns back, I have been re-investing it back into USI-Tech each time I acrew €50. €50 = one package.So I started with 50 packages (it should have been 40 packages however I got 10 for free) and now, xxx days since starting (insert date) i have xx packages. This is going well as over time, bitcoin has continued to go up, since I’ve started this little project. </p>
-        <h3>Am I going to get my $2,000 back?</h3>
+        <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">Am I going to get my $2,000 back?</h2>
           <p>The way I’m doing it, Initially, no. And it took me to start doing it, throwing my money in, and feeling out the system to understand. I eventually will get it back, but it’s a long term plan and it took some working out to realise. I’m reinvesting my returns as I get it and I’m pumping the money back into the system to build those package numbers up. This increases the amount of returns I’m getting and the speed to which i do it. Could I just ride the 140 days out, and cash out, yep, absolutely but I’m playing a long term game here. I will get to a point in my initial 140 days however, where I’ll stop reinvesting my returns into more packages and let my returns accumulate into my initial $3,000; cash that out, and start again on my pure return on capital. I’m going to do this around the 100 day point. </p>
       </div>
   </body>
