--- a/index.html
+++ b/index.html
@@ -124,8 +124,25 @@
         <p style="text-align: right; font-size: 10px;"><i>*based on a 5 day week on average as of November 2017 </i></p>
       </div>
       <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">How am I doing it?!?</h2>
-          <p>I’m buying contracts (their real name is packages) through a mining company called USI Tech. Basically, what happens is I buy a contract from USI-Tech worth €50 which is paid back to me in bitcoin. Each pack (or contract) lasts for 140 Days.
-            <br><br>What USI-Tech claim to do is give me 140% return on capital for that one package returning 1% per day paid in bitcoin. With that 1% you're free to either let it compound, withdraw as you like or use it to rebuy pacakges. <br><br>What it doesn’t take into account is if the value of bitcoin goes up, (as they pay in bitcoin), so does your returns. </p>
+          <p>I’m buying packages through a mining company called USI Tech.<br /><br />Basically, what happens is I buy a (1) contract from USI-Tech worth the equivilant of €50 in Bitcoin. Each contract lasts for 140 Days.
+            <br><br>What USI-Tech claim to do is give me 140% return on my capital for that one package and they return 1% to me per day paid in bitcoin.<br /><br />That 1% per day, I'm free to either let it compound and build up over time and withdraw as I like <u><b>or</b></u> I can use it to rebuy another contract when my balance reached the equivilate of €50 in bitcoin. <br><br>While they claim to return 140% worth of my inicial captial. What it doesn’t take into account is if the value of bitcoin goes up since my first puchase, (as they pay in bitcoin) my return is greater than 140%.</p>
+      <div class="container" id="eg">
+              <div class="add">
+                <h3>€50</h3>
+                  <p>worth of bitcoin goes in</p>
+              </div>
+              <div class="time">
+                  <h3><i>140 days<br /  >later... </i></h3>
+              </div>
+              <div class="out">
+                <h3>€70</h3>
+                  <p>worth of bitcoin comes out</p>
+              </div>
+          </div>
+
+        <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">Example;</h2>
+        <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">IN: €50 worth of bitcoin ADD: 140%  OUT: €70 worth of bitcoin.</h2>
+        <h3 style="font-size: 20px; text-align: center;">You still following along? </h3>
         <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">So how much did I put in?</h2>
           <p>Initially, I put AU$3,000 (USD$2,332) into USI-Tech. I figured, throw a decent sum and see what happens, knowing full well, Bitcoin (Or USI-Tech) could all be gone tomorrow. So far, xxx days since starting (insert date) i have gotten back xxxBitcoin which is USD$xxx AU$xxx  €xxx...However, As I get my returns back, I have been re-investing it back into USI-Tech each time I acrew €50. €50 = one package.So I started with 50 packages (it should have been 40 packages however I got 10 for free) and now, xxx days since starting (insert date) i have xx packages. This is going well as over time, bitcoin has continued to go up, since I’ve started this little project. </p>
         <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">Am I going to get my $2,000 back?</h2>
