final copy and design update

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <h2>This is my experiment into Bitcoin and so far...</h2>
       <div class="container" id="status">
         <div class="days">
-          <h2 style="background-color: #ff5c5c;">72 Days</h2>
+          <h2 style="background-color: #ff5c5c;">89 Days</h2>
           <p>into this</p>
         </div>
         <div class="money">
-          <h2 style="background-color: #ff5c5c;">USD $150</h2>
+          <h2 style="background-color: #ff5c5c;">USD $176</h2>
           <p>return on capital a day*<p>
         </div>
       </div>
@@ -45,11 +45,11 @@
     <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">How? Let me explain...from the start!</h2>
     <div class="container" id="aboutme">
       <div class="copy">
-      <p> So i'm a 32-year-old gen Y that, like many, have they looming question constantly floating around... What am i doing with my money!<br /><br /><b>Am i right?</b><br /><br />After hearing and reading so much about Bitcoin in the news, online and socials that I thought, stuff it! I have some spare change, let's roll the dice and see what happens.<br /><br /> Now, When this topic comes up at dinner parties everyone is always interested along with a ton of questions, so, I thought I would document my attempt at Bitcoin.
+      <p> So i'm a 32-year-old gen Y that, like many, have they looming question constantly floating around... What am i doing with my money!<br /><br /><b>AM I RIGHT?</b><br /><br />After hearing and reading so much about Bitcoin in the news, online and socials, I thought, stuff it! I have some spare change, let's roll the dice and see what happens.<br /><br /> Now, When this topic comes up at dinner parties everyone is always interested along with a ton of questions, so, I thought I would document my attempt at Bitcoin.
         <h4>So... who am I? Who I'm not!</h4>
         <ul>
           <li>I’m not a financial expert.</li>
-          <li>I’m not trained professional.</li>
+          <li>I’m not a trained professional.</li>
           <li>I’m not a broker</li>
           <li>and I’m not giving advice</li>
         </ul>
@@ -66,14 +66,14 @@
     <div id="questions">
       <h2  style="color: #ff5c5c; font-size: 40px; text-align: center;">Question #1...What is Bitcoin?</h2>
         <p style="text-align: center;">It’s crypto currency, meaning it’s currency that lives online. You can't feel it, you can't touch it, you can't hold it!<br />
-        <br /><b style="font-size: 20px;">Yes</b><br />It’s real money but not hard physical money.<br />
-        <br /><b style="font-size: 20px;">Yes</b><br />You can convert it to hard currency like USD, AUD and any single currency in the world.<br />
+        <br /><b style="font-size: 20px;">Yes</b><br />It’s real form of currency.<br />
+        <br /><b style="font-size: 20px;">Yes</b><br />You can convert it to hard currency (called Fiat currency) like USD, AUD and any single currency in the world.<br />
         <br /><b style="font-size: 20px;">Yes</b><br />You can buy real things likes beers, products and even houses with it.<br />
         <br /><b style="font-size: 20px;">Yes</b><br />There are Bitcoin ATM’s popping up all around the globe.<br /></p>
       <div class="container" id="procon">
         <div class="pro">
           <h3>What’s Bitcoin’s advantage?</h3>
-            <p>It’s decentralised! It’s not tied to any one government, country or body of people meaning it’s left to its own devices. <br /><br>It’s a political safe haven when a country or government landscape could be in uproar. Bitcoin’s value is driven from supply and demand!</p>
+            <p>It’s decentralised! It’s not tied to any one government, country or body of people meaning it’s left to its own devices. It's only worth what people are willing to pay for it. <br /><br>It’s a political safe haven when a country or government landscape could be in uproar. Bitcoin’s value is driven from supply and demand!</p>
         </div>
         <div class="con">
           <h3>What’s it’s disadvantages?</h3>
@@ -86,7 +86,13 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/l9jOJk30eQs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
       <div class="copy">
-        <p>A whole stack of people/computers called miners (who mining for Bitcoin) who collectively record every single bitcoin transaction that happens.<br><br>This is stored on something called the block chain. The block chain gets updated in real-time by the minors.<br><br>When a transaction happens, the transaction gets announced into the bitcoin eco system in the form of a puzzle/code. The first person/computer to crack the number puzzle/code gets a fee for doing it the fastest. They then update the block chain with the transaction details and the world keeps turning.<br><br> Rather than me expalin in depth, this video does a pretty good job at it.</p>
+        <p>I bet you have a whole bunch of questions at this point about Bitcoin and how it works? Right? At this point, I know I did!</p>
+          <ul>
+            <li>Is Bitcoin safe?</li>
+            <li>Can it be hacked?</li>
+            <li>How does it work if there is no government?</li>
+          </ul>
+        <p>I HEAR YOU!</b> I watched this video and it all came together for me!! How Bitcoin works, what the blockchain is and who controls it!</p>
       </div>
     </div>
     <div class="container" id="graph">
@@ -100,8 +106,8 @@
     new TradingView.widget({
       "width": 500,
       "height": 300,
-      "symbol": "NASDAQ:AAPL",
-      "interval": "D",
+      "symbol": "KRAKEN:XBTUSD",
+      "interval": "30",
       "timezone": "Etc/UTC",
       "theme": "Light",
       "style": "3",
@@ -119,34 +125,104 @@
     <div id="recap">
       <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">So let's go back to the orginal numbers...</h2>
       <div id="subheading">
-        <h2>My return on Captial</h2>
-        <h2 style="font-size: 50px;"> is USD $150 a day*</h2>
+        <h2>My return on Capital</h2>
+        <h2 style="font-size: 50px;"> is USD $176 a day*</h2>
         <p style="text-align: right; font-size: 10px;"><i>*based on a 5 day week on average as of November 2017 </i></p>
       </div>
-      <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">How am I doing it?!?</h2>
-          <p>I’m buying packages through a mining company called USI Tech.<br /><br />Basically, what happens is I buy a (1) contract from USI-Tech worth the equivilant of €50 in Bitcoin. Each contract lasts for 140 Days.
-            <br><br>What USI-Tech claim to do is give me 140% return on my capital for that one package and they return 1% to me per day paid in bitcoin.<br /><br />That 1% per day, I'm free to either let it compound and build up over time and withdraw as I like <u><b>or</b></u> I can use it to rebuy another contract when my balance reached the equivilate of €50 in bitcoin. <br><br>While they claim to return 140% worth of my inicial captial. What it doesn’t take into account is if the value of bitcoin goes up since my first puchase, (as they pay in bitcoin) my return is greater than 140%.</p>
-      <div class="container" id="eg">
+      <div class="container" id="howdoing">
+        <div class="howdoingmedia">
+          <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">How am I doing it?!?</h2>
+          <img src="./resources/question.png">
+        </div>
+        <div class="copy">
+          <p>I’m buying packages through a mining company called USI Tech.<br /><br />Basically, what happens is I buy a (1) contract from USI-Tech worth the equivilant of €50 in Bitcoin. Each contract lasts for approx. 140 business days.
+          <br><br>What USI-Tech do is give me 140% return on my capital for that one package and they return approx. 1% to me per day in bitcoin.<br /><br /> I say "approx. 140 business days" becuase it's until 140% return is reached. One day can return anywhere from 0.75% to 1.25% therefor it could be more or less than 140 business days. So, if you work on approx. 1% per business day = 140 business days.<br /><br />That 1% per day, I'm free to either let it compound and build up over time and withdraw as I like <u><b>or</b></u> I can use it to rebuy another contract when my balance reached the equivilate of €50 in bitcoin. <br><br>While they return 140% worth of my initial captial, here is the even better news, it doesn’t take into account if the value of bitcoin goes up since my first puchase because they pay in bitcoin. If Bitcoin goes up, my return is greater than 140%.</p>
+        <div class="container" id="eg">
               <div class="add">
                 <h3>€50</h3>
-                  <p>worth of bitcoin goes in</p>
+                  <p>worth of bitcoin goes in<br /><i>(Ƀ0.0076)</i></p>
               </div>
               <div class="time">
-                  <h3><i>140 days<br /  >later... </i></h3>
+                <h4><i>Approx.<br/>140 days<br /  >later... </i></h4>
               </div>
               <div class="out">
-                <h3>€70</h3>
-                  <p>worth of bitcoin comes out</p>
+                <h3>€70<br/></h3>
+                  <p>worth of bitcoin comes out<br /><i>(Ƀ0.0106)</i></p>
               </div>
-          </div>
-
-        <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">Example;</h2>
-        <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">IN: €50 worth of bitcoin ADD: 140%  OUT: €70 worth of bitcoin.</h2>
-        <h3 style="font-size: 20px; text-align: center;">You still following along? </h3>
-        <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">So how much did I put in?</h2>
-          <p>Initially, I put AU$3,000 (USD$2,332) into USI-Tech. I figured, throw a decent sum and see what happens, knowing full well, Bitcoin (Or USI-Tech) could all be gone tomorrow. So far, xxx days since starting (insert date) i have gotten back xxxBitcoin which is USD$xxx AU$xxx  €xxx...However, As I get my returns back, I have been re-investing it back into USI-Tech each time I acrew €50. €50 = one package.So I started with 50 packages (it should have been 40 packages however I got 10 for free) and now, xxx days since starting (insert date) i have xx packages. This is going well as over time, bitcoin has continued to go up, since I’ve started this little project. </p>
-        <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">Am I going to get my $2,000 back?</h2>
-          <p>The way I’m doing it, Initially, no. And it took me to start doing it, throwing my money in, and feeling out the system to understand. I eventually will get it back, but it’s a long term plan and it took some working out to realise. I’m reinvesting my returns as I get it and I’m pumping the money back into the system to build those package numbers up. This increases the amount of returns I’m getting and the speed to which i do it. Could I just ride the 140 days out, and cash out, yep, absolutely but I’m playing a long term game here. I will get to a point in my initial 140 days however, where I’ll stop reinvesting my returns into more packages and let my returns accumulate into my initial $3,000; cash that out, and start again on my pure return on capital. I’m going to do this around the 100 day point. </p>
+            </div>
+            <div class="container" id="buttonwhite">
+              <div class="buttoncopy">
+                <h2 style="color: #ff5c5c; font-size: 40px;">If you want to start</h2>
+              </div>
+              <div class="button">
+                <a href="https://brayds.usitech-int.com" target="_blank"><img src="./resources/checkout.png"></a>
+              </div>
+            </div>
+        </div>
       </div>
+      <div class="container" id="howmuch">
+        <div class="howmuchcopy">
+          <p><b>Initially, I put AU$3,000 (USD$2,332) into USI-Tech. I figured, throw a decent sum and see what happens, knowing full well, Bitcoin (Or USI-Tech) could all be gone tomorrow.<br /><br /> So far, 89 days since starting (15th July 2017) My lifetime return on capital is<u> 1.7403 Bitcoin</u> which converts to (as of 19th November '17);<br /><br />USD$13,440.68<br />AU$17,752.33<br /><b>€11,399.63<br />HKD$104,993.12<br /><br />However...<br /><br />As I get my returns back, I have been re-investing it back into USI-Tech each time I acrew €50 worth of bitcoin because €50 = one package.<br /><br />So I started with 50 packages (it should have been 40 packages however I got 10 for free) and now, 89 days since starting (15th July 2017) I have 185 packages. I'm now averaging buying 16 packages a week (at €50 each)!<br /><br />I have to say, I've been pretty happy so far and on top of that, bitcoin has continued to go up, since I’ve started this little project.</b></p>
+        </div>
+        <div class="howmuchmedia">
+          <h2 style="color: white; font-size: 40px; text-align: center;">So how much did I put in?</h2>
+          <img src="./resources/coin.png">
+        </div>
+      </div>
+      <div class="container" id="moneyback">
+        <div class="moneybackmedia">
+          <h2 style="color: #ff5c5c; font-size: 40px; text-align: center;">Am I going to get my $3,000 back?</h2>
+          <img src="./resources/moneyback.png">
+        </div>
+        <div class="moneybackcopy">
+          <p>I'm playing a long term game here, so at the end of my 140 (ish) business days, will I get my exact $3,000 back? Not exactly because I've used my daily returns to reinvest back into USI-TECH.<br /> <br /> Had i not used my returns to buy additional packages, I could absoultly, let it build up and I could walk way with my $3,000 plus the additional 40% and call it a day. But I'm not.<br /><br /> I’m using my returns as I get it and I’m pumping the money back into the system to build those package numbers up. This increases the amount of returns I’m getting daily; The more packges the more daily returns (with all packages returning a 1% return per day) and the speed to which i do it.<br /> <br /> I will get to a point in my initial 140 days however, where I’ll stop buying packages with my returns and let my returns accumulate into my initial $3,000; cash that out, and start again on my pure return on capital.</p>
+        </div>
+      </div>
+      <div id="email">
+        <h2 style="color: #ff5c5c; text-align: center;font-size: 40px;">Get the Info that unlocked Bitcoin for me<br/>Plus I'll show you how much I'm earning!</h2>
+        <script async id="_ck_298492" src="https://forms.convertkit.com/298492?v=6"></script>
+      </div>
+      <div class="container" id="exit">
+        <div class="exitcopy">
+          <p>I've got Bitcoin working for me! I've bought using my returns;<br />
+            <br />A Sonos Speaker
+            <br />A Microphone for work
+            <br />A year long subscription to a news site<br />
+          <p>My next step.... RENT!<br /><br />At anytime I can transfer my Bitcoins out of USI-Tech (2% withdraw fee) into a coin purse; something that holds your Bitcoins.<br /> <br />Not all coin purses are created equally, some let you have an A.T.M card with VISA or MASTERCARD so you can litrerally go to an ATM and withdraw your Bitcoins out in Fiat currency (AUD, USD, GBP etc) and use the money to buy whatever you need.<br /> <br />Some Resturants, Cafes, Cars are now accepting Bitcoins, so you can pay for it directly out of your coin purse. The World is your oyster.</p>
+        </div>
+        <div class="exitmedia">
+          <h2 style="color: white; font-size: 40px; text-align: center;">How do I pay rent with my Bitcoin?</h2>
+          <img src="./resources/exit.png">
+        </div>
+      </div>
+      <div class="container" id="buttonwhite">
+        <div class="buttoncopy">
+          <h2 style="color: #ff5c5c; font-size: 40px;">If you want to start your own passive income</h2>
+        </div>
+        <div class="button">
+          <a href="https://brayds.usitech-int.com" target="_blank"><img src="./resources/checkout.png"></a>
+        </div>
+      </div>
+      <div class="container" id="start">
+        <div class="startcopy">
+          <p>If you think this is something you want to get involved in and are happy to take the risk, it's pretty easy to get started. Here is how i did it;<br />
+          <br />Set up an account with USI-TECH <a href="https://brayds.usitech-int.com" target="_blank">HERE</a><br/>(It's free to set up an account)<br>
+          <br />Set up a coin wallet because you'll need a place online to keep your Bitcoins!<br />Think of it like a Piggy Bank! There are a stack to choose from but the most popular are Coinjar, Coinbase & ANX<br />(just check what region they serve).<br /> <br />Link your bank account and transfer over the amount you wish to transfer into Bitcoin.<br />
+          <br />Link your Coin Wallet with you USI-TECH account and you can start buying packages and kick off your 140%</p>
+        </div>
+        <div class="startmedia">
+          <h2 style="color: white; font-size: 40px; text-align: center;">If you want to get started...</h2>
+          <img src="./resources/123.png">
+        </div>
+      </div>
+      <div class="container" id="buttonpink">
+        <div class="buttoncopy">
+          <h2 style="color: white; font-size: 40px;">If you want to get involved with Bitcoin...</h2>
+        </div>
+        <div class="button">
+          <a href="https://brayds.usitech-int.com" target="_blank"><img src="./resources/checkoutwhite.png"></a>
+        </div>
+      </div>
+      <p style="font-size: 10px; padding-top: 20px;"><i>Full Disclosure. So all cards are on the table, some of these links to USI-Tech are affiliate links, meaning, should you wish to sign up to USI-Tech, I will get a commission should you purchase packs; Initially and ongoing. Don’t worry, nothing comes out of your pocket but i just wanted to let you know. I’m not affiliated with USI-Tech nor any of their parent or related company. I’m using USI-Tech as a customer and that’s about the extent of the relationship.</i></p>
   </body>
 </html>
