--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div id="questions">
       <h2  style="color: #ff5c5c; font-size: 40px; text-align: center;">Question #1...What is Bitcoin?</h2>
         <p style="text-align: center;">It’s crypto currency, meaning it’s currency that lives online. You can't feel it, you can't touch it, you can't hold it!<br />
-        <br /><b style="font-size: 20px;">Yes</b><br />It’s real form of currency.<br />
+        <br /><b style="font-size: 20px;">Yes</b><br />It’s a form of currency.<br />
         <br /><b style="font-size: 20px;">Yes</b><br />You can convert it to hard currency (called Fiat currency) like USD, AUD and any single currency in the world.<br />
         <br /><b style="font-size: 20px;">Yes</b><br />You can buy real things likes beers, products and even houses with it.<br />
         <br /><b style="font-size: 20px;">Yes</b><br />There are Bitcoin ATM’s popping up all around the globe.<br /></p>
@@ -97,7 +97,7 @@
     </div>
     <div class="container" id="graph">
       <div class="copy">
-        <h2  style="color: #ff5c5c; font-size: 40px; text-align: center;">So, how is Bitcoin growning against the US Dollar?</h2>
+        <h2  style="color: #ff5c5c; font-size: 40px; text-align: center;">So, how is Bitcoin growing against the US Dollar?</h2>
       </div>
       <div class="media">
         <!-- TradingView Widget BEGIN -->
@@ -135,8 +135,8 @@
           <img src="./resources/question.png">
         </div>
         <div class="copy">
-          <p>I’m buying packages through a mining company called USI Tech.<br /><br />Basically, what happens is I buy a (1) contract from USI-Tech worth the equivilant of €50 in Bitcoin. Each contract lasts for approx. 140 business days.
-          <br><br>What USI-Tech do is give me 140% return on my capital for that one package and they return approx. 1% to me per day in bitcoin.<br /><br /> I say "approx. 140 business days" becuase it's until 140% return is reached. One day can return anywhere from 0.75% to 1.25% therefor it could be more or less than 140 business days. So, if you work on approx. 1% per business day = 140 business days.<br /><br />That 1% per day, I'm free to either let it compound and build up over time and withdraw as I like <u><b>or</b></u> I can use it to rebuy another contract when my balance reached the equivilate of €50 in bitcoin. <br><br>While they return 140% worth of my initial captial, here is the even better news, it doesn’t take into account if the value of bitcoin goes up since my first puchase because they pay in bitcoin. If Bitcoin goes up, my return is greater than 140%.</p>
+          <p>I’m buying packages through a mining company called USI Tech.<br /><br />Basically, what happens is I buy a (1) package from USI-Tech worth the equivilant of €50 in Bitcoin. Each package lasts for approx. 140 business days.
+          <br><br>What USI-Tech do is give me 140% return on my capital for that one package and they return approx. 1% to me per day in bitcoin.<br /><br /> I say "approx. 140 business days" becuase it's until 140% return is reached. One day can return anywhere from 0.75% to 1.25% therefor it could be more or less than 140 business days. So, if you work on approx. 1% per business day = 140 business days.<br /><br />That 1% per day, I'm free to either let it compound and build up over time and withdraw as I like <u><b>or</b></u> I can use it to rebuy another package when my balance reached the equivilate of €50 in bitcoin. <br><br>While they return 140% worth of my initial captial, here is the even better news, it doesn’t take into account if the value of bitcoin goes up since my first puchase because they pay in bitcoin. If Bitcoin goes up, my return is greater than 140%.</p>
         <div class="container" id="eg">
               <div class="add">
                 <h3>€50</h3>
@@ -150,6 +150,7 @@
                   <p>worth of bitcoin comes out<br /><i>(Ƀ0.0106)</i></p>
               </div>
             </div>
+            <p style="text-align: center; font-size: 12px;">* This example assumes that the price of Bitcoin stays the same,<br />however given the trend of late, it keeps increasing.</p>
             <div class="container" id="buttonwhite">
               <div class="buttoncopy">
                 <h2 style="color: #ff5c5c; font-size: 40px;">If you want to start</h2>
@@ -175,7 +176,7 @@
           <img src="./resources/moneyback.png">
         </div>
         <div class="moneybackcopy">
-          <p>I'm playing a long term game here, so at the end of my 140 (ish) business days, will I get my exact $3,000 back? Not exactly because I've used my daily returns to reinvest back into USI-TECH.<br /> <br /> Had i not used my returns to buy additional packages, I could absoultly, let it build up and I could walk way with my $3,000 plus the additional 40% and call it a day. But I'm not.<br /><br /> I’m using my returns as I get it and I’m pumping the money back into the system to build those package numbers up. This increases the amount of returns I’m getting daily; The more packges the more daily returns (with all packages returning a 1% return per day) and the speed to which i do it.<br /> <br /> I will get to a point in my initial 140 days however, where I’ll stop buying packages with my returns and let my returns accumulate into my initial $3,000; cash that out, and start again on my pure return on capital.</p>
+          <p>I'm playing a long term game here, so at the end of my 140 (ish) business days, will I get my exact $3,000 back? Not exactly because I've used my daily returns to rebuy back into USI-TECH.<br /> <br /> Had i not used my returns to buy additional packages, I could absoultly, let it build up and I could walk way with my $3,000 plus the additional 40% and call it a day. But I'm not.<br /><br /> I’m using my returns as I get it and I’m pumping the money back into the system to build those package numbers up. This increases the amount of returns I’m getting daily; The more packges the more daily returns (with all packages returning a 1% return per day) and the speed to which i do it.<br /> <br /> I will get to a point in my initial 140 days however, where I’ll stop buying packages with my returns and let my returns accumulate into my initial $3,000; cash that out, and start again on my pure return on capital.</p>
         </div>
       </div>
       <div id="email">
@@ -188,7 +189,7 @@
             <br />A Sonos Speaker
             <br />A Microphone for work
             <br />A year long subscription to a news site<br />
-          <p>My next step.... RENT!<br /><br />At anytime I can transfer my Bitcoins out of USI-Tech (2% withdraw fee) into a coin purse; something that holds your Bitcoins.<br /> <br />Not all coin purses are created equally, some let you have an A.T.M card with VISA or MASTERCARD so you can litrerally go to an ATM and withdraw your Bitcoins out in Fiat currency (AUD, USD, GBP etc) and use the money to buy whatever you need.<br /> <br />Some Resturants, Cafes, Cars are now accepting Bitcoins, so you can pay for it directly out of your coin purse. The World is your oyster.</p>
+          <p>My next step.... RENT!<br /><br />At anytime I can transfer my Bitcoins out of USI-Tech (2% withdraw fee) into a coin wallet; something that holds your Bitcoins. A wallet can either be something as simple as an App on your smartphone or whats called a "hard wallet" which is a USB stick protected with encryption.<br /> <br />Not all coin wallets are created equally, some let you have an A.T.M card with VISA or MASTERCARD so you can litrerally go to an ATM and withdraw your Bitcoins out in Fiat currency (AUD, USD, GBP etc) and use the money to buy whatever you need.<br /> <br />Some Resturants, Cafes, Cars are now accepting Bitcoins, so you can pay for it directly out of your coin wallet. The World is your oyster.</p>
         </div>
         <div class="exitmedia">
           <h2 style="color: white; font-size: 40px; text-align: center;">How do I pay rent with my Bitcoin?</h2>
